--- a/styleforlogin.css
+++ b/styleforlogin.css
@@ -17,7 +17,7 @@ body{
 }
 .center1 h1{
     text-align: center;
-    padding: 0 0 20px 0;
+    padding: 10px 0 20px 0;
     border-bottom: 1px solid silver;
 }
 
@@ -45,9 +45,9 @@ form .txt_field{
 
 .txt_field label{
     position: absolute;
-    top: 50%;
+    top: 25%;
     left: 50%;
-    color: #adadad;
+    /* color: #adadad; */
     transform: translate(-50%);
     font-size: 16px;
     pointer-events: none;
@@ -80,22 +80,8 @@ form .txt_field{
     text-decoration: underline;
 }
 
-input[type="submit"]{
-    width: 100%;
-    height: 50px;
-    border: 1px solid;
-    background: #2691d9;
-    border-radius: 25px;
-    font-size: 18px;
-    color: white;
-    font-weight: 700;
-    cursor: pointer;
-    outline: none;
-}
-
-input[type="submit"]:hover{
-    border-color: #2691d9;
-    transition: .5s;
+.logBtn{
+    text-align: center;
 }
 
 .sign_Up{
